--- a/GameTicTacToe/package.json
+++ b/GameTicTacToe/package.json
@@ -1,5 +1,6 @@
 {
   "name": "my-portfolio-app",
+  "homepage": "http://prajakta.website/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
